--- a/build-aux/app.drey.PaperPlane.Devel.json
+++ b/build-aux/app.drey.PaperPlane.Devel.json
@@ -76,7 +76,7 @@
                 {
                     "type": "git",
                     "url": "https://gitlab.gnome.org/GNOME/gtk.git",
-                    "tag": "4.10.3"
+                    "branch": "main"
                 },
                 {
                     "type": "patch",
