--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Marco Melorio <marco.melorio@protonmail.com>", "Marcus Behrendt <mar
 edition = "2021"
 
 [dependencies]
-adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", branch = "v0.3-adaptive-states-and-more", package = "libadwaita", features = ["v1_3"] }
+adw = { version = "0.4.1", package = "libadwaita", features = ["v1_4"]}
 anyhow = "1"
 ellipse = "0.2"
 futures = { version = "0.3", default-features = false }
@@ -13,9 +13,11 @@ gettext-rs = { version = "0.7", features = ["gettext-system"] }
 gtk = { version = "0.6", package = "gtk4", features = ["gnome_44", "blueprint"] }
 image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
 indexmap = "1"
+itertools = "0.10.5"
 locale_config = "0.3"
 log = "0.4"
 once_cell = "1"
+ori = { git = "https://github.com/yuraiz/origami", branch = "grouped_layout", version = "0.1.0", package = "origami" }
 pretty_env_logger = "0.5"
 qrcode-generator = { version = "4", default-features = false }
 regex = "1"
